--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 '/'
+title:               Blog
+tagline:             'Blog'
+description:         'Blog'
+url:                 
 baseurl:             '/'
-paginate:            5
+paginate:            100
 permalink:           pretty
 
 # About/contact
-author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+author: 
+  name: Abasty             
+  url:               
+  email:             
 
 # Gems
 plugins:
@@ -19,4 +19,4 @@ plugins:
 
 # Custom vars
 version:             1.1.0
-google_analytics_id: #UA-XXXX-Y
+google_analytics_id: #
